# OSPratice

./: .gitignore  CMakeLists.txt
exp1_1/: Makefile  my_demo_list_all_threads-objs  my_process_list.c
exp1_2/: Makefile  list_process_by_pid copy.c  list_process_by_pid.c
exp2/: Makefile  copyfile.c
exp3/IPC_MessageQueue/: main  main.c
exp3/IPC_PIPE/: main  main.c
exp3/IPC_SharedMemery/: main  main.c
exp3/myshell/: main  main.bak1  main.c  test_fork  test_fork.c
exp3/myshell/cmd/: A+B.c  cmd1  cmd2  copy.c
exp4/: block.c  block.h  file.c  file.h  list.c  list.h  myfs  myfs.c  myfs.h  test_list  test_list.c  types.c  types.h
